--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=CSC348
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:SIECUVQiGPdVZTGC8sZJGbqVgrqWLCER/iNeQAyRL6o=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -21,10 +21,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS="${APP_NAME}@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
